docs/1.22/api/interfaces/miniapputilsprovider.md
**[js-miniapp-sdk](../README.md)**

> [Globals](../README.md) / MiniAppUtilsProvider

# Interface: MiniAppUtilsProvider

Mini App Utility methods

## Hierarchy

* **MiniAppUtilsProvider**

## Index

### Methods

* [canOpenAppDeeplink](miniapputilsprovider.md#canopenappdeeplink)
* [closeMiniApp](miniapputilsprovider.md#closeminiapp)
* [getFeatureList](miniapputilsprovider.md#getfeaturelist)
* [getHostAppThemeColors](miniapputilsprovider.md#gethostappthemecolors)
* [isAppDeeplinkSupported](miniapputilsprovider.md#isappdeeplinksupported)
* [isDarkMode](miniapputilsprovider.md#isdarkmode)
* [launchExternalBrowser](miniapputilsprovider.md#launchexternalbrowser)
* [launchInternalBrowser](miniapputilsprovider.md#launchinternalbrowser)
* [miniAppFinishedLoading](miniapputilsprovider.md#miniappfinishedloading)
* [sendAnalytics](miniapputilsprovider.md#sendanalytics)
* [setCloseAlert](miniapputilsprovider.md#setclosealert)

## Methods

### canOpenAppDeeplink

▸ **canOpenAppDeeplink**(`deeplinkURL`: string): Promise\<boolean>

*Defined in [js-miniapp-sdk/src/modules/utils.ts:55](https://github.com/rakutentech/js-miniapp/blob/cac19e7/js-miniapp-sdk/src/modules/utils.ts#L55)*

Interface to check if the device has the deeplink available.

#### Parameters:

Name | Type |
------ | ------ |
`deeplinkURL` | string |

**Returns:** Promise\<boolean>

___

### closeMiniApp

▸ **closeMiniApp**(`withConfirmation`: boolean): Promise\<string>

*Defined in [js-miniapp-sdk/src/modules/utils.ts:23](https://github.com/rakutentech/js-miniapp/blob/cac19e7/js-miniapp-sdk/src/modules/utils.ts#L23)*

Mini App can be closed using this method, provided Host app is supporting this interface to close the miniapp.

#### Parameters:

Name | Type | Description |
------ | ------ | ------ |
`withConfirmation` | boolean | boolean value which will be used by the host app to show/hide close confirmation alert which should be set using `setCloseAlert` method in prior before calling this interface  |

**Returns:** Promise\<string>

___

### getFeatureList

▸ **getFeatureList**(): Promise\<string[]>

*Defined in [js-miniapp-sdk/src/modules/utils.ts:50](https://github.com/rakutentech/js-miniapp/blob/cac19e7/js-miniapp-sdk/src/modules/utils.ts#L50)*

Interface to get list of features supported by the SDK and Host

**Returns:** Promise\<string[]>

___

### getHostAppThemeColors

▸ **getHostAppThemeColors**(): Promise\<[HostThemeColor](hostthemecolor.md)>

*Defined in [js-miniapp-sdk/src/modules/utils.ts:34](https://github.com/rakutentech/js-miniapp/blob/cac19e7/js-miniapp-sdk/src/modules/utils.ts#L34)*

Interface that is used to get the Color theme used in the Host application

**Returns:** Promise\<[HostThemeColor](hostthemecolor.md)>

___

### isAppDeeplinkSupported

▸ **isAppDeeplinkSupported**(`deeplinkURL`: string): Promise\<boolean>

*Defined in [js-miniapp-sdk/src/modules/utils.ts:60](https://github.com/rakutentech/js-miniapp/blob/cac19e7/js-miniapp-sdk/src/modules/utils.ts#L60)*

Interface to check if the application has whitelisted the deeplink

#### Parameters:

Name | Type |
------ | ------ |
`deeplinkURL` | string |

**Returns:** Promise\<boolean>

___

### isDarkMode

▸ **isDarkMode**(): Promise\<boolean>

*Defined in [js-miniapp-sdk/src/modules/utils.ts:39](https://github.com/rakutentech/js-miniapp/blob/cac19e7/js-miniapp-sdk/src/modules/utils.ts#L39)*

Interface to check if the Device/Application is using Dark mode

**Returns:** Promise\<boolean>

___

### launchExternalBrowser

▸ **launchExternalBrowser**(`url`: string): Promise\<boolean>

*Defined in [js-miniapp-sdk/src/modules/utils.ts:66](https://github.com/rakutentech/js-miniapp/blob/cac19e7/js-miniapp-sdk/src/modules/utils.ts#L66)*

This interface will be used to launch the URL in external browser

#### Parameters:

Name | Type | Description |
------ | ------ | ------ |
`url` | string | Remote URL  |

**Returns:** Promise\<boolean>

___

### launchInternalBrowser

▸ **launchInternalBrowser**(`url`: string): Promise\<boolean>

*Defined in [js-miniapp-sdk/src/modules/utils.ts:72](https://github.com/rakutentech/js-miniapp/blob/cac19e7/js-miniapp-sdk/src/modules/utils.ts#L72)*

This interface will be used to launch the URL in Internal browser

#### Parameters:

Name | Type | Description |
------ | ------ | ------ |
`url` | string | Remote URL  |

**Returns:** Promise\<boolean>

___

### miniAppFinishedLoading

▸ **miniAppFinishedLoading**(): Promise\<string>

*Defined in [js-miniapp-sdk/src/modules/utils.ts:29](https://github.com/rakutentech/js-miniapp/blob/cac19e7/js-miniapp-sdk/src/modules/utils.ts#L29)*

Miniapp can notify the host app that it has finished loading using this call.
Host app can implement this interface to perform any other actions after the miniapp has loaded.

**Returns:** Promise\<string>

___

### sendAnalytics

▸ **sendAnalytics**(`analytics`: [MAAnalyticsInfo](maanalyticsinfo.md)): Promise\<string>

*Defined in [js-miniapp-sdk/src/modules/utils.ts:45](https://github.com/rakutentech/js-miniapp/blob/cac19e7/js-miniapp-sdk/src/modules/utils.ts#L45)*

Interface to send analytics to Host app

#### Parameters:

Name | Type |
------ | ------ |
`analytics` | [MAAnalyticsInfo](maanalyticsinfo.md) |

**Returns:** Promise\<string>

___

### setCloseAlert

▸ **setCloseAlert**(`alertInfo`: [CloseAlertInfo](closealertinfo.md)): Promise\<string>

*Defined in [js-miniapp-sdk/src/modules/utils.ts:16](https://github.com/rakutentech/js-miniapp/blob/cac19e7/js-miniapp-sdk/src/modules/utils.ts#L16)*

Mini App can choose whether to display Close confirmation alert dialog when mini app is closed

#### Parameters:

Name | Type | Description |
------ | ------ | ------ |
`alertInfo` | [CloseAlertInfo](closealertinfo.md) | CloseAlertInfo object  |

**Returns:** Promise\<string>
